[gd_scene load_steps=10 format=3 uid="uid://5eeruw0y76t5"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_3sdc8"]
[ext_resource type="AudioStream" uid="uid://cyyvtim5tqac0" path="res://Sounds/music/cinematic.mp3" id="2_rl3ga"]
[ext_resource type="Texture2D" uid="uid://c0ye6wiguocqi" path="res://UI/Graphics/CP_Back.png" id="3_1sv6t"]
[ext_resource type="Texture2D" uid="uid://bpodpjdvrj4p" path="res://UI/Graphics/SledgeTitle.png" id="3_6wny1"]
[ext_resource type="Texture2D" uid="uid://bbynjvqiceo11" path="res://UI/backdrops/Space2.png" id="3_36yhb"]
[ext_resource type="Script" path="res://UI/load_game.gd" id="5_bmbm4"]
[ext_resource type="Theme" uid="uid://ehwvvgpd7w2t" path="res://UI/Graphics/Theme_chip.tres" id="7_l55rl"]
[ext_resource type="Texture2D" uid="uid://ssbma0t65dqa" path="res://UI/icons/audio.svg" id="8_fh4hf"]
[ext_resource type="PackedScene" uid="uid://broaos8akuc5f" path="res://Creatives/Assets/Palladin.tscn" id="8_labk7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3sdc8")

[node name="HTTPRequest" type="HTTPRequest" parent="."]
accept_gzip = false

[node name="AmbientMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_rl3ga")
volume_db = -20.0
autoplay = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_36yhb")
expand_mode = 1
stretch_mode = 6

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 351.0
offset_bottom = 173.0
texture = ExtResource("3_6wny1")
expand_mode = 1
stretch_mode = 4

[node name="UserInfo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -387.0
offset_top = 7.0
offset_right = -6.0
offset_bottom = 99.0
grow_horizontal = 0
horizontal_alignment = 2

[node name="LoginGroup" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -98.5
offset_right = 182.0
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_l55rl")
texture = ExtResource("3_1sv6t")

[node name="lbl_login_title" type="Label" parent="LoginGroup"]
layout_mode = 0
offset_left = 19.0
offset_top = 13.0
offset_right = 308.0
offset_bottom = 44.0
scale = Vector2(1.1, 1.1)
text = "Login Credentials"

[node name="txt_username" type="LineEdit" parent="LoginGroup"]
layout_mode = 0
offset_left = 136.0
offset_top = 57.0
offset_right = 344.0
offset_bottom = 88.0
theme = ExtResource("7_l55rl")

[node name="lbl_username" type="Label" parent="LoginGroup/txt_username"]
layout_mode = 0
offset_left = -117.0
offset_top = 2.0
offset_right = -11.0
offset_bottom = 33.0
text = "Username:"

[node name="txt_password" type="LineEdit" parent="LoginGroup"]
layout_mode = 0
offset_left = 136.0
offset_top = 93.5
offset_right = 344.0
offset_bottom = 124.5
theme = ExtResource("7_l55rl")
secret = true

[node name="lbl_password" type="Label" parent="LoginGroup/txt_password"]
layout_mode = 0
offset_left = -117.0
offset_top = 2.0
offset_right = -15.0
offset_bottom = 33.0
text = "Password:"

[node name="btn_login" type="Button" parent="LoginGroup"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -159.0
offset_top = -48.5
offset_right = -14.0
offset_bottom = -13.5
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("7_l55rl")
text = "Login"

[node name="btn_register" type="Button" parent="LoginGroup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = 50.0
offset_right = -18.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_l55rl")
text = "Register"

[node name="ln_high" type="Line2D" parent="LoginGroup"]
position = Vector2(18.75, 45.55)
scale = Vector2(9.75, 7.05)
points = PackedVector2Array(0, 0, 33.5, 0)
width = 0.2
default_color = Color(0.408329, 0.408329, 0.408329, 1)

[node name="ln_low" type="Line2D" parent="LoginGroup"]
position = Vector2(18.75, 137.55)
scale = Vector2(9.75, 7.05)
points = PackedVector2Array(0, 0, 33.5, 0)
width = 0.2
default_color = Color(0.408329, 0.408329, 0.408329, 1)

[node name="LoadGroup" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 116.0
offset_right = -10.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1sv6t")
script = ExtResource("5_bmbm4")
NPC = ExtResource("8_labk7")

[node name="lbl_login_title" type="Label" parent="LoadGroup"]
layout_mode = 1
offset_left = 13.0
offset_right = 156.0
offset_bottom = 31.0
text = "Load a game here!"

[node name="Levels" type="ItemList" parent="LoadGroup"]
layout_mode = 1
offset_left = 13.0
offset_top = 54.0
offset_right = 163.0
offset_bottom = 354.0

[node name="Crafts" type="ItemList" parent="LoadGroup"]
layout_mode = 1
offset_left = 177.0
offset_top = 54.0
offset_right = 327.0
offset_bottom = 354.0

[node name="lbl_levels" type="Label" parent="LoadGroup"]
layout_mode = 0
offset_left = 13.0
offset_top = 28.0
offset_right = 156.0
offset_bottom = 59.0
text = "Levels:"

[node name="lbl_crafts" type="Label" parent="LoadGroup"]
layout_mode = 0
offset_left = 178.0
offset_top = 28.0
offset_right = 321.0
offset_bottom = 59.0
text = "Crafts:"

[node name="btn_load" type="Button" parent="LoadGroup"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -35.0
offset_right = 145.0
grow_vertical = 0
theme = ExtResource("7_l55rl")
text = "Load Game"

[node name="WelcomeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -28.0
offset_right = 623.0
offset_bottom = -5.0
grow_vertical = 0

[node name="btn_quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -145.0
offset_top = -35.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("7_l55rl")
text = "Quit"

[node name="btn_musicBool" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -81.0
offset_right = -5.0
offset_bottom = -41.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("8_fh4hf")
icon_alignment = 1

[node name="sld_musicVolume" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -143.0
offset_top = -71.0
offset_right = -52.0
offset_bottom = -51.0
grow_horizontal = 0
grow_vertical = 0
min_value = -30.0
max_value = 1.0
value = -20.0
